[tool.poetry]
name = "text-classifier"
version = "0.1.0"
description = ""
authors = ["Maisabdalrazeq <maisabdalrazq@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^2.2.9"
pandas = "^1.1.5"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
